compiler/src/test/resources/amyc/parser/failing/ArgsError2.amy
module Args
  foo(bar baz)
end Args
